--- a/css/custom.css
+++ b/css/custom.css
@@ -16,17 +16,38 @@ body{
     right: auto;
 }
 
+.navbar.navbar-fixed-top{
+    min-height: 60px;
+    border-bottom: 1px solid #9d9d9d;
+}
+
+.grid-item {
+    width: 25%;
+}
+
 section{
     padding: 30px 0 30px 0;
 }
 
 section#about{
+    padding-top: 60px;
+}
+
+section#trainers {
+    background-color: rgba(34, 34, 34, 0.9);
+}
+
+section#trainers div.col-sm-6 img{
+    border: 5px solid white;
 }
 
 section#gallery {
-    background-color: #222;
 }
 
 section#schedule{
+    background-color: rgba(	105,105,105, 0.9);
+}
+
+section#contacts {
     background-color: rgba(47, 79, 79, 0.9);
 }
