--- a/css/custom.css
+++ b/css/custom.css
@@ -23,14 +23,23 @@ body{
 
 .grid-item {
     width: 25%;
+    padding: 5px;
+}
+
+.grid-item>.thumbnail{
+    margin-bottom: 0;
 }
 
 section{
-    padding: 30px 0 30px 0;
+    padding: 50px 0;
+}
+.container {
+    /*border: 1px solid whitesmoke;*/
 }
 
+
 section#about{
-    padding-top: 60px;
+    padding-top: 100px;
 }
 
 section#trainers {
